auto encoder method implemented

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ numpy>=1.24.0
 pandas>=2.0.0
 scikit-learn>=1.3.0
 matplotlib>=3.7.0
-soundfile>=0.12.1 
+soundfile>=0.12.1
+torch>=2.1.0
+torchvision>=0.16.0
+Pillow>=10.0.0 
